# aiogrambot

./: .dockerignore  .env-dist  .gitignore  README.md  create_bot.py  docker-compose.yml  dockerfile  game_handlers.py  handlers.py  keyboards.py  main.py  pyproject.toml  settings.py  states.py  utils.py
.github/: copilot-instructions.md
db/: base.py  dao.py  database.py  models.py
handlers/: game_handlers.py  handlers.py  todo_hendlers.py
keyboards/: keyboards.py
utils/: parse_jokes.py  utils.py  wordle_utils.py
